{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 205,
  "lineage": "c5b078ff-df19-575a-3702-733a669c3046",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:security-group/sg-0a1f273eba5d9cfee",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1f273eba5d9cfee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "176906365059",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "env": "celzey-terraform"
            },
            "vpc_id": "vpc-0990b358bd42adeae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dc8935042bf64d5f",
            "association_id": "eipassoc-07226ed6dbdf7fe46",
            "domain": "vpc",
            "id": "eipalloc-0dc8935042bf64d5f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01d9eb7f881d6aaa3",
            "private_dns": "ip-99-88-0-189.ec2.internal",
            "private_ip": "99.88.0.189",
            "public_dns": "ec2-34-233-168-84.compute-1.amazonaws.com",
            "public_ip": "34.233.168.84",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "env": "celzey-terraform"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0889a44b331db0194",
            "arn": "arn:aws:ec2:us-east-1:176906365059:instance/i-0a983fb0967873c8d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a983fb0967873c8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "celzey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00d8253bc071e867e",
            "private_dns": "ip-99-88-0-6.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "99.88.0.6",
            "public_dns": "ec2-54-172-39-255.compute-1.amazonaws.com",
            "public_ip": "54.172.39.255",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e38933a18f3233f9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-038a9e7c3b6da5793",
            "tags": {
              "Name": "celzey-terraform-ec2"
            },
            "tags_all": {
              "Name": "celzey-terraform-ec2",
              "env": "celzey-terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a1f273eba5d9cfee"
            ]
          },
          "dependencies": [
            "aws_default_security_group.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:internet-gateway/igw-06f527427af371944",
            "id": "igw-06f527427af371944",
            "owner_id": "176906365059",
            "tags": {
              "Name": "celzey-igw"
            },
            "tags_all": {
              "Name": "celzey-igw",
              "env": "celzey-terraform"
            },
            "vpc_id": "vpc-0990b358bd42adeae"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dc8935042bf64d5f",
            "association_id": "eipassoc-07226ed6dbdf7fe46",
            "connectivity_type": "public",
            "id": "nat-088ee2ca7afab4410",
            "network_interface_id": "eni-01d9eb7f881d6aaa3",
            "private_ip": "99.88.0.189",
            "public_ip": "34.233.168.84",
            "subnet_id": "subnet-038a9e7c3b6da5793",
            "tags": {
              "Name": "celzey-terraform-nat"
            },
            "tags_all": {
              "Name": "celzey-terraform-nat",
              "env": "celzey-terraform"
            }
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-074315f7f5aaddebe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-088ee2ca7afab4410",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-074315f7f5aaddebe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_nat_gateway.main_nat_gw",
            "aws_route_table.private-rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06f527427af371944",
            "id": "r-rtb-051d4bbbdffcf13a11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-051d4bbbdffcf13a1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public-rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:route-table/rtb-074315f7f5aaddebe",
            "id": "rtb-074315f7f5aaddebe",
            "owner_id": "176906365059",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-088ee2ca7afab4410",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "celzey-terraform-private-rt"
            },
            "tags_all": {
              "Name": "celzey-terraform-private-rt",
              "env": "celzey-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0990b358bd42adeae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:route-table/rtb-051d4bbbdffcf13a1",
            "id": "rtb-051d4bbbdffcf13a1",
            "owner_id": "176906365059",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06f527427af371944",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "celzey-terraform-public-rt"
            },
            "tags_all": {
              "Name": "celzey-terraform-public-rt",
              "env": "celzey-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0990b358bd42adeae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c82434901bb7930",
            "route_table_id": "rtb-074315f7f5aaddebe",
            "subnet_id": "subnet-08694042ad4509d88"
          },
          "dependencies": [
            "aws_route_table.private-rt",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca427e1e123225dc",
            "route_table_id": "rtb-074315f7f5aaddebe",
            "subnet_id": "subnet-0e8f2c22fd9264d9a"
          },
          "dependencies": [
            "aws_route_table.private-rt",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f78701692402f8f3",
            "route_table_id": "rtb-051d4bbbdffcf13a1",
            "subnet_id": "subnet-038a9e7c3b6da5793"
          },
          "dependencies": [
            "aws_route_table.public-rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da5133e8ce0c74ad",
            "route_table_id": "rtb-051d4bbbdffcf13a1",
            "subnet_id": "subnet-0b5c8f70070b44450"
          },
          "dependencies": [
            "aws_route_table.public-rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:subnet/subnet-08694042ad4509d88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "99.88.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08694042ad4509d88",
            "ipv6_cidr_block": "2600:1f18:38b5:302::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0676032802497db2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "176906365059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "celzey-terraform-PriSub-us-east-1a"
            },
            "tags_all": {
              "Name": "celzey-terraform-PriSub-us-east-1a",
              "env": "celzey-terraform"
            },
            "vpc_id": "vpc-0990b358bd42adeae"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:subnet/subnet-0e8f2c22fd9264d9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "99.88.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8f2c22fd9264d9a",
            "ipv6_cidr_block": "2600:1f18:38b5:303::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-05bf9f22c7a84450b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "176906365059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "celzey-terraform-PriSub-us-east-1b"
            },
            "tags_all": {
              "Name": "celzey-terraform-PriSub-us-east-1b",
              "env": "celzey-terraform"
            },
            "vpc_id": "vpc-0990b358bd42adeae"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:subnet/subnet-038a9e7c3b6da5793",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "99.88.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038a9e7c3b6da5793",
            "ipv6_cidr_block": "2600:1f18:38b5:300::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-047ac449e62f9d0a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "176906365059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "celzey-terraform-PubSub-us-east-1a"
            },
            "tags_all": {
              "Name": "celzey-terraform-PubSub-us-east-1a",
              "env": "celzey-terraform"
            },
            "vpc_id": "vpc-0990b358bd42adeae"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:subnet/subnet-0b5c8f70070b44450",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "99.88.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5c8f70070b44450",
            "ipv6_cidr_block": "2600:1f18:38b5:301::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0b637179c7233204e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "176906365059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "celzey-terraform-PubSub-us-east-1b"
            },
            "tags_all": {
              "Name": "celzey-terraform-PubSub-us-east-1b",
              "env": "celzey-terraform"
            },
            "vpc_id": "vpc-0990b358bd42adeae"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:vpc/vpc-0990b358bd42adeae",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "99.88.0.0/16",
            "default_network_acl_id": "acl-0ec90e0cc892ecc22",
            "default_route_table_id": "rtb-0ff080ec856214f85",
            "default_security_group_id": "sg-0a1f273eba5d9cfee",
            "dhcp_options_id": "dopt-01662f52edb1b9c77",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0990b358bd42adeae",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-03f0ce03258cb0396",
            "ipv6_cidr_block": "2600:1f18:38b5:300::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ff080ec856214f85",
            "owner_id": "176906365059",
            "tags": {
              "Name": "celzey-vpc"
            },
            "tags_all": {
              "Name": "celzey-vpc",
              "env": "celzey-terraform"
            }
          }
        }
      ]
    }
  ]
}